my second commit

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,12 +8,37 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">programme1suite</th></tr>
-<tr><td><a href="#t0">programmeTest</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">13,715</td><td></td><td></td></tr>
+<tr><th colspan="8">mysuite</th></tr>
+<tr><td><a href="#t0">chrome Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">23,350</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t1">edge Test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">27,211</td><td></td><td></td></tr>
+<tr><td><a href="#t2">firefox Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">39,622</td><td></td><td></td></tr>
+<tr><th>Total</th><th class="num">4</th><th class="num">0</th><th class="num">0</th><th class="num attn">2</th><th class="num">90,183</th><th colspan="2"></th></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">programme1suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">programmeTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">parallel_execution.Programme_Parallel1</td><td><a href="#m0">login</a></td><td rowspan="1">1677749763831</td><td rowspan="1">1577</td></tr><tr class="passedeven"><td><a href="#m1">title</a></td><td rowspan="1">1677749765422</td><td rowspan="1">1187</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">mysuite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">chrome Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">parallel_execution.Programme_Parallel1</td><td><a href="#m0">title</a></td><td rowspan="1">1677769425752</td><td rowspan="1">5088</td></tr><tr><th colspan="4">chrome Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">parallel_execution.Programme_Parallel1</td><td><a href="#m1">login</a></td><td rowspan="1">1677769424950</td><td rowspan="1">793</td></tr></tbody>
+<tbody id="t1"><tr><th colspan="4">edge Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">parallel_execution.Programme_Parallel1</td><td><a href="#m2">title</a></td><td rowspan="1">1677769433478</td><td rowspan="1">2279</td></tr><tr><th colspan="4">edge Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">parallel_execution.Programme_Parallel1</td><td><a href="#m3">login</a></td><td rowspan="1">1677769432194</td><td rowspan="1">1277</td></tr></tbody>
+<tbody id="t2"><tr><th colspan="4">firefox Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">parallel_execution.Programme_Parallel1</td><td><a href="#m4">login</a></td><td rowspan="1">1677769443203</td><td rowspan="1">2598</td></tr><tr class="passedeven"><td><a href="#m5">title</a></td><td rowspan="1">1677769445803</td><td rowspan="1">45</td></tr></tbody>
 </table>
-<h2>programmeTest</h2><h3 id="m0">parallel_execution.Programme_Parallel1#login</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">parallel_execution.Programme_Parallel1#title</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>chrome Test</h2><h3 id="m0">parallel_execution.Programme_Parallel1#title</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: The following asserts failed:
+	expected [] but found [actiTIME - Enter Time-Track]
+	at parallel_execution.Programme_Parallel1.title(Programme_Parallel1.java:66)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:264)
+	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1136)
+	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:635)
+	at java.base/java.lang.Thread.run(Thread.java:833)
+... Removed 20 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">parallel_execution.Programme_Parallel1#login</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>edge Test</h2><h3 id="m2">parallel_execution.Programme_Parallel1#title</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: The following asserts failed:
+	expected [actiTIME - Login] but found [actiTIME - Enter Time-Track]
+	at parallel_execution.Programme_Parallel1.title(Programme_Parallel1.java:66)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+	at java.base/java.util.concurrent.FutureTask.run(FutureTask.java:264)
+	at java.base/java.util.concurrent.ThreadPoolExecutor.runWorker(ThreadPoolExecutor.java:1136)
+	at java.base/java.util.concurrent.ThreadPoolExecutor$Worker.run(ThreadPoolExecutor.java:635)
+	at java.base/java.lang.Thread.run(Thread.java:833)
+... Removed 20 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">parallel_execution.Programme_Parallel1#login</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>firefox Test</h2><h3 id="m4">parallel_execution.Programme_Parallel1#login</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">parallel_execution.Programme_Parallel1#title</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
