--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,12 +1,28 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="70f8a6">  <td>23/03/02 15:02:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Programme_Parallel1.title()[pri:2, instance:parallel_execution.Programme_Parallel1@54a7079e]">title</td> 
-  <td>main@1094523823</td>   <td></td> </tr>
-<tr bgcolor="70f8a6">  <td>23/03/02 15:02:10</td>   <td>-14360</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Programme_Parallel1.setup()[pri:0, instance:parallel_execution.Programme_Parallel1@54a7079e]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1094523823</td>   <td></td> </tr>
-<tr bgcolor="70f8a6">  <td>23/03/02 15:02:22</td>   <td>-2946</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Programme_Parallel1.login()[pri:1, instance:parallel_execution.Programme_Parallel1@54a7079e]">login</td> 
-  <td>main@1094523823</td>   <td></td> </tr>
-<tr bgcolor="70f8a6">  <td>23/03/02 15:02:29</td>   <td>3741</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Programme_Parallel1.closeapp()[pri:0, instance:parallel_execution.Programme_Parallel1@54a7079e]">&lt;&lt;closeapp</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1094523823</td>   <td></td> </tr>
+<tr bgcolor="6773a3">  <td>23/03/02 20:08:16</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Programme_Parallel1.closeapp()[pri:0, instance:parallel_execution.Programme_Parallel1@2dc54ad4]">&lt;&lt;closeapp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@480903748</td>   <td></td> </tr>
+<tr bgcolor="6773a3">  <td>23/03/02 20:08:16</td>   <td>-25</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Programme_Parallel1.title()[pri:2, instance:parallel_execution.Programme_Parallel1@2dc54ad4]">title</td> 
+  <td>main@480903748</td>   <td></td> </tr>
+<tr bgcolor="6773a3">  <td>23/03/02 20:08:14</td>   <td>-1907</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Programme_Parallel1.login()[pri:1, instance:parallel_execution.Programme_Parallel1@2dc54ad4]">login</td> 
+  <td>main@480903748</td>   <td></td> </tr>
+<tr bgcolor="6773a3">  <td>23/03/02 20:08:06</td>   <td>-9779</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Programme_Parallel1.setup(java.lang.String)[pri:0, instance:parallel_execution.Programme_Parallel1@2dc54ad4]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@480903748</td>   <td></td> </tr>
+<tr bgcolor="6773a3">  <td>23/03/02 20:08:24</td>   <td>8036</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Programme_Parallel1.closeapp()[pri:0, instance:parallel_execution.Programme_Parallel1@1c7696c6]">&lt;&lt;closeapp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@480903748</td>   <td></td> </tr>
+<tr bgcolor="6773a3">  <td>23/03/02 20:08:21</td>   <td>4667</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Programme_Parallel1.title()[pri:2, instance:parallel_execution.Programme_Parallel1@1c7696c6]">title</td> 
+  <td>main@480903748</td>   <td></td> </tr>
+<tr bgcolor="6773a3">  <td>23/03/02 20:08:20</td>   <td>3747</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Programme_Parallel1.login()[pri:1, instance:parallel_execution.Programme_Parallel1@1c7696c6]">login</td> 
+  <td>main@480903748</td>   <td></td> </tr>
+<tr bgcolor="6773a3">  <td>23/03/02 20:08:18</td>   <td>1838</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Programme_Parallel1.setup(java.lang.String)[pri:0, instance:parallel_execution.Programme_Parallel1@1c7696c6]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@480903748</td>   <td></td> </tr>
+<tr bgcolor="6773a3">  <td>23/03/02 20:08:25</td>   <td>8674</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Programme_Parallel1.setup(java.lang.String)[pri:0, instance:parallel_execution.Programme_Parallel1@1a6d8329]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@480903748</td>   <td></td> </tr>
+<tr bgcolor="6773a3">  <td>23/03/02 20:08:45</td>   <td>29269</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Programme_Parallel1.login()[pri:1, instance:parallel_execution.Programme_Parallel1@1a6d8329]">login</td> 
+  <td>main@480903748</td>   <td></td> </tr>
+<tr bgcolor="6773a3">  <td>23/03/02 20:08:47</td>   <td>31180</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Programme_Parallel1.title()[pri:2, instance:parallel_execution.Programme_Parallel1@1a6d8329]">title</td> 
+  <td>main@480903748</td>   <td></td> </tr>
+<tr bgcolor="6773a3">  <td>23/03/02 20:08:49</td>   <td>32534</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Programme_Parallel1.closeapp()[pri:0, instance:parallel_execution.Programme_Parallel1@1a6d8329]">&lt;&lt;closeapp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@480903748</td>   <td></td> </tr>
 </table>
